--- a/includes/stylesheet.css
+++ b/includes/stylesheet.css
@@ -148,4 +148,5 @@ a.button:link, a.button:active, a.button:visited { color: #fff !important; }
 #PromoDetails { background-color: #fff; height: 385px; padding: 0 20px; width: 710px; }
 #PromoDetails p { font-size: 18px; }
 #PromoDetails h1 { font-size: 28px; font-weight: normal; }
+#PromoDetails a { color: #070de5 !important; }
 
